--- a/src/pages/generated-configs/generated-configs.html
+++ b/src/pages/generated-configs/generated-configs.html
@@ -21,7 +21,7 @@
 </ion-header>
 
 <ion-content >
-
+<!-- 
   <ion-list no-lines>
     <div class="divider" *ngFor="let config of configs">
          <ion-item >
@@ -29,6 +29,7 @@
             <span item-end class="value_configs">{{config.value}}</span>
          </ion-item>
     </div>
-  </ion-list>
+  </ion-list> -->
+  <pre>{{ configs | json }}</pre>
 
 </ion-content>
