--- a/src/pages/insert-requirements/insert-requirements.html
+++ b/src/pages/insert-requirements/insert-requirements.html
@@ -20,7 +20,7 @@
 
     <ion-item class="select_item">
       <ion-label floating color="secondary">Tamanho do feixe no alvo (cm²)</ion-label>
-      <ion-input type="number" formControlName="beamSize" min="0"></ion-input>
+      <ion-input type="tel" formControlName="beamSize" min="0"></ion-input>
       
     </ion-item>
     <ion-item class="select_item">
