--- a/src/pages/select-requirements/select-requirements.html
+++ b/src/pages/select-requirements/select-requirements.html
@@ -14,6 +14,7 @@
 </ion-header>
 
 <ion-content padding>
+  {{teste}}
   <h4 text-center class="title-page">Selecione os parâmetrossss</h4>
   <form [formGroup]="requirements" (submit)="nextPage()">
 
